test/files/neg/undefined-members.check
undefined-members.scala:5: error: object creation impossible, since method x is not defined
object A {
       ^
undefined-members.scala:9: error: object creation impossible, since value x is not defined
object B {
       ^
undefined-members.scala:13: error: object creation impossible, since variable x is not defined
(Note that variables need to be initialized to be defined)
object C {
       ^
undefined-members.scala:21: error: object creation impossible, since method x in trait Iface of type => Int is not defined
object E extends Iface
       ^
undefined-members.scala:25: error: object creation impossible, since method x is not defined
  val a = new { def x: Int }
              ^
undefined-members.scala:26: error: object creation impossible, since value x is not defined
  val b = new { val x: Int }
              ^
undefined-members.scala:27: error: object creation impossible, since variable x is not defined
(Note that variables need to be initialized to be defined)
  val c = new { var x: Int }
              ^
undefined-members.scala:29: error: object creation impossible, since method x in trait Iface of type => Int is not defined
  val e = new Iface { val one = 1 }
              ^
undefined-members.scala:33: error: class ShouldBeAbstract needs to be abstract, since method x is not defined
class ShouldBeAbstract {
      ^
9 errors found
